--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body{
     margin: 0 auto;
 }
 #search-container{
-    margin: 1em 0;
+    margin: 1em 0;    
 }
 #search-container input{
     background-color: transparent;
     width: 40%;
     border-bottom: 2px solid #110f29;
-    padding: 1em 0.3em;
+    padding: 1em 0.3em;    
 }
 #search-container input:focus{
     border-bottom-color: #6759ff ;
@@ -32,6 +32,7 @@ body{
     color: #ffffff;
     border-radius: 5px;
     margin-top: 0.5em;
+    cursor: pointer;
 }
 .button-value{
     border: 2px solid #6759ff;
@@ -66,4 +67,29 @@ img{
     max-width: 100%;
     object-fit: contain;
     height: 15em;
+}
+.container{
+    padding-top: 1em;
+    color: #110f29;
+}
+.container h5{
+    font-weight: 500;
+}
+.hide{
+    display: none;
+}
+@media screen and (max-width: 720px){
+    img {
+        max-width: 100%;
+        object-fit: cover;
+        height: 10em;
+    }
+    .card{
+        max-width: 10em;
+        margin-top: 1em;
+    }
+    #products{
+        grid-template-columns: auto auto;
+        grid-column-gap: 1em;
+    }
 }
